--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,16 @@ Jinja2==2.10
 MarkupSafe==1.1.0
 numpy==1.16.0
 pandas==0.23.4
+patsy==0.5.1
+pkg-resources==0.0.0
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
 python-dateutil==2.7.5
 pytz==2018.9
 rpy2==2.9.5
+scikit-learn==0.20.2
+scipy==1.2.0
 six==1.12.0
+sklearn==0.0
 tzlocal==1.5.1
 Werkzeug==0.14.1
